Fix vertical scrollbar always appearing

--- a/css/main.css
+++ b/css/main.css
@@ -64,9 +64,7 @@ body {
 }
 .footer {
   position: absolute;
-  bottom: 0;
-  /* Set the fixed height of the footer here */
-  height: 60px;
+  bottom: 10px;
 }
 
 
